# aura-swarm

./: .dockerignore  .gitignore  Cargo.toml  run-cli.ps1
crates/aura-swarm-auth/: Cargo.toml
crates/aura-swarm-auth/src/: client.rs  error.rs  jwks.rs  jwt.rs  lib.rs
crates/aura-swarm-cli/: Cargo.toml
crates/aura-swarm-cli/src/: app.rs  client.rs  main.rs  markdown.rs  types.rs  ui.rs  ws.rs
crates/aura-swarm-cli/tests/: runtime_integration.rs
crates/aura-swarm-control/: Cargo.toml
crates/aura-swarm-control/src/: error.rs  lib.rs  lifecycle.rs  main.rs  scheduler_client.rs  service.rs  session.rs  types.rs
crates/aura-swarm-core/: Cargo.toml
crates/aura-swarm-core/src/: error.rs  ids.rs  lib.rs
crates/aura-swarm-gateway/: Cargo.toml
crates/aura-swarm-gateway/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
crates/aura-swarm-gateway/src/handlers/: agents.rs  health.rs  internal.rs  mod.rs  sessions.rs  ws.rs
crates/aura-swarm-scheduler/: Cargo.toml
crates/aura-swarm-scheduler/src/: cache.rs  error.rs  k8s.rs  lib.rs  main.rs  pod.rs  types.rs
crates/aura-swarm-store/: Cargo.toml
crates/aura-swarm-store/src/: error.rs  keys.rs  lib.rs  rocks.rs  schema.rs  types.rs
deploy/: 00-prerequisites.sh  01-init-terraform.sh  02-deploy-network.sh  03-deploy-storage.sh  04-deploy-eks.sh  05-configure-eks.sh  06-deploy-ecr.sh  07-build-images.sh  08-deploy-k8s.sh  09-verify.sh  config.env  destroy.sh  enable-gateway-persistence.sh  refresh-k8s.sh
deploy/k8s/: 00-namespaces.yaml  01-storage-class.yaml  02-pvc.yaml  03-secrets.yaml  04-rbac.yaml  05-gateway.yaml  06-control.yaml  07-scheduler.yaml  08-network-policies.yaml  09-runtime-class.yaml
deploy/terraform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
deploy/terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
deploy/terraform/modules/eks/: main.tf  outputs.tf  variables.tf
deploy/terraform/modules/network/: main.tf  outputs.tf  variables.tf
deploy/terraform/modules/storage/: main.tf  outputs.tf  variables.tf
docker/: Dockerfile.control  Dockerfile.gateway  Dockerfile.scheduler
docs/spec/v0.1.0/: 01-system-overview.md  02-api-gateway.md  03-control-plane.md  04-agent-registry.md  05-scheduler.md  06-agent-runtime.md  07-auth.md  08-networking.md  09-observability.md  10-security.md  README.md
