[workspace]
resolver = "2"
members = [
    "crates/aura-swarm-core",
    "crates/aura-swarm-store",
    "crates/aura-swarm-auth",
    "crates/aura-swarm-control",
    "crates/aura-swarm-scheduler",
    "crates/aura-swarm-gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Aura Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# Storage
rocksdb = "0.22"

# Authentication
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Kubernetes
kube = { version = "0.98", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }

# Utilities
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
base64 = "0.22"
parking_lot = "0.12"

# Tracing
tracing = "0.1"

# Testing
wiremock = "0.6"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
