[package]
name = "aura-swarm-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "JWT authentication for aura-swarm"

[features]
default = []
test-utils = []

[dependencies]
aura-swarm-core = { path = "../aura-swarm-core" }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
