[package]
name = "aura-swarm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Terminal UI for managing Aura Swarm agents"

[[bin]]
name = "aswarm"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client
reqwest.workspace = true

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror.workspace = true
anyhow = "1"

# Markdown parsing
pulldown-cmark = "0.12"

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# Date/time
chrono.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
