[package]
name = "aura-swarm-control"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Control plane for aura-swarm agent lifecycle management"

[[bin]]
name = "aura-swarm-control"
path = "src/main.rs"

[features]
default = []
test-utils = ["aura-swarm-auth/test-utils"]

[dependencies]
aura-swarm-core = { path = "../aura-swarm-core" }
aura-swarm-store = { path = "../aura-swarm-store" }
aura-swarm-auth = { path = "../aura-swarm-auth" }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# HTTP client for scheduler communication
reqwest = { workspace = true }

# HTTP server (for binary)
axum = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
