[package]
name = "aura-swarm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types and utilities for aura-swarm"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
